# lanaFS

./: .gitignore  Cargo.toml
rpc/: rpc.proto
src/: main.rs  service.rs
src/infrastructure/: db.rs
src/model/: file.rs  mod.rs  server.rs  slice.rs
src/rpc/: mod.rs  rpc.rs  rpc_grpc.rs
src/service/: mod.rs
