[package]
name = "lana_fs"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
lazy_static = "1.4.0"
rusqlite = "0.21.0"
reqwest = "0.10.4"
tokio = { version = "0.2.16", features = ["full"] }
bytes = "0.5.4"
